--- a/src/stylesheets/dashboard.scss
+++ b/src/stylesheets/dashboard.scss
@@ -1,4 +1,132 @@
 .dashboard{
-  width: 100%;
+  height: 90%;
+  width: 80%;
+}
+
+.menu{
+  height: 5vh;
+}
+
+.page-content{
+  box-sizing: border-box;
+  height: 85vh;
+  padding: 16px;
+  & h1{
+    float: left;
+    margin: 0;
+  }
+}
+
+.menu-item{
+  height: 5vh;
+  font-size: 1.5rem !important;
+  text-transform: capitalize !important;
+  overflow: hidden;
+  transition: .2s ease-in-out all;
+  &:hover{
+    overflow: visible;
+    background-color: $primary-color-dark !important;
+  }
+}
+
+
+.paper-container{
   height: 100%;
+}
+
+.overview{
+  height: 100%;
+  box-sizing: content-box;
+  display: flex;
+  justify-content: space-around;
+}
+
+.left{
+  box-sizing: border-box;
+  width: 45%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.right{
+  box-sizing: border-box;
+  width: 45%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.map-container{
+  box-sizing: border-box;
+  height: 100%;
+  width: 100%;
+  box-shadow: 0 0 10px rgba(0, 0, 0, .3);
+}
+
+.inventory-container{
+
+}
+
+.inventory{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: flex-start;
+  box-sizing: border-box;
+  padding: 16px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, .3);
+}
+
+#header-inventory{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+#inventory-list{
+  @extend .inventory;
+}
+
+.item-container{
+  padding: 16px;
+  max-height: 25%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-basis: 100%;
+  margin-bottom: 16px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, .5);
+}
+
+%icon {
+  height: 5vh;
+  width: 5vh;
+  padding: 8px;
+}
+
+#icon-water{
+  @extend %icon;
+  background: url(../imgs/water.png) center center no-repeat;
+  background-size: contain;
+}
+#icon-food{
+  @extend %icon;
+  background: url(../imgs/food.png) center center no-repeat;
+  background-size: contain;
+}
+#icon-medication{
+  @extend %icon;
+  background: url(../imgs/first-aid.png) center center no-repeat;
+  background-size: contain;
+}
+#icon-ammunition{
+  @extend %icon;
+  background: url(../imgs/bullet.png) center center no-repeat;
+  background-size: contain;
 }
